# dark-news

./: .gitignore  pyproject.toml  requirements.txt
agentcore/: agent.py  invoker.py  requirements.txt
docs/: README.md
health/: handler.py
scripts/: build_agent.sh
src/: __init__.py  config.py  logging_utils.py  metrics.py  models.py  orchestrator.py  registry.py  relevance_filter.py  retry.py  summarizer.py
src/publishers/: __init__.py  email.py  slack.py
src/scrapers/: __init__.py  arxiv.py  aws_changelog.py  github_signal.py  huggingface.py  reddit.py
templates/: digest_html.j2  digest_plain.j2
terraform/: .terraform.tfstate.lock.info  agent.tf  compute.tf  dashboard.tf  main.tf  outputs.tf  variables.tf
tests/: test_infra.py  test_local_pipeline.py
